src/main/java/com/example/property_management/error/exception/UserNotFoundException.java
package com.example.property_management.error.exception;

public class UserNotFoundException extends RuntimeException {

    public UserNotFoundException(String message) {super(message);}
}
